--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
         "@waves.exchange/provider-web": "^1.1.1",
         "@waves/waves-transactions": "^4.2.5-beta.1",
         "@waves/signer": "^1.0.1",
+        "@babel/runtime": "^7.16.7",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "express": "^4.17.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "focus-trap-react": "^8.9.1"
     },
     "devDependencies": {
         "@babel/core": "7.16.7",
         "@babel/runtime-corejs2": "7.16.7",
+        "@babel/plugin-transform-runtime": "^7.16.10",
         "babel-loader": "^8.2.3",
+        "css-loader": "^6.6.0",
+        "style-loader": "^3.3.1",
         "babel-preset-es2015": "^6.24.1",
         "cross-env": "^7.0.3",
         "html-webpack-plugin": "^5.5.0",
